# mynion

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  agent.py  invoke_agent.py  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: lint.yml  test.yml
.steering/20251230-document-setup/: requirements.md
.steering/20251231-thread-reply-without-mention/: design.md  requirements.md  tasklist.md
.steering/20260103-google-calendar-integration/: design.md  requirements.md  tasklist.md
app/: __init__.py
app/slack/: __init__.py  receiver.py
app/slack/worker/: agent_client.py  handler.py  requirements.txt
cdk/: agentcore_gateway.py  agentcore_runtime.py  app.py  cdk.context.json.example  cdk.json  gateway_stack.py  post-deploy.sh  requirements.txt  slack_stack.py
docs/: DEVELOPMENT.md  SLACK_SETUP.md  architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
interfaces/slack/: Dockerfile  receiver.py  requirements.txt
interfaces/slack/oauth_callback/: Dockerfile  handler.py  requirements.txt
interfaces/slack/worker/: Dockerfile  __init__.py  agent_client.py  handler.py
mcp/calendar/: __init__.py  handler.py
tests/: test_receiver.py
